Wrap long text in setup issues
Summary: Really long text strings break this ui when first setting up Phabricator.

Test Plan: MySQL sql_mode setup issue.

Reviewers: epriestley

Reviewed By: epriestley

Subscribers: Korvin

Differential Revision: https://secure.phabricator.com/D16455

--- a/webroot/rsrc/css/application/config/setup-issue.css
+++ b/webroot/rsrc/css/application/config/setup-issue.css
@@ -38,6 +38,7 @@
 .setup-issue table td {
   border: 1px solid #BFCFDA;
   padding: 8px;
+  word-break: break-word;
 }
 
 .setup-issue pre {
